test/basic/tilebuf_invalid_32byte_align_colmajor.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// CHECK: error: tile_buf with blayout=col_major, slayout=none_box requires rows * elem_bytes to be 32-byte aligned

func.func @test_32byte_align_colmajor() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %tb = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=15, cols=32, v_row=15, v_col=32, blayout=col_major, slayout=none_box, fractal=512, pad=0>
  return
}